Some readability fixes for mobile

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -353,6 +353,10 @@ strong {
   word-break: break-all
 }
 
+.oneline {
+  overflow-x: auto
+}
+
 .red {
   color: #d56f6a !important;
 }
